[package]
name = "crab8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
wgpu = "0.18.0"
winit = { version = "0.29.2", features = ["rwh_05"]}

